--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
 
 body {
   margin: 0;
-  font-size: 16px;
-  line-height: 19px;
+  font: 1em/19px Emoji Chrome mac os, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   color: #6f7782;
 }
 
