--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,29 @@ body {
 
 .overlay {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
   background: rgb(0, 0, 0, 0.6);
   transition: opacity 0.6s cubic-bezier(0, 0, 0.4, 1);
-  z-index: -1;
   opacity: 0;
+  overflow: hidden;
+  z-index: 100;
 }
 
 .overlay.active {
-  z-index: 100;
   opacity: 1;
+}
+
+#wrapper {
+  padding-top: 63px;
+
+  @media (min-width: 768px) {
+    padding-top: 55px;
+  }
+
+  @media (min-width: 1280px) {
+    padding-top: 63px;
+  }
 }
