--- a/src/components/Visual/visual.scss
+++ b/src/components/Visual/visual.scss
@@ -2,6 +2,11 @@
   height: calc(100vh - 63px);
   overflow: hidden;
   position: relative;
+  background: url('/images/visual.jpg') no-repeat 50% 50%;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   @media (min-width: 768px) {
     height: calc(100vh - 55px);
@@ -19,16 +24,11 @@
 }
 
 .visual-box__title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   color: #ffffff;
   font-size: 36px;
   line-height: 1.35;
   text-align: center;
   margin: 0;
-  transform: translateX(-50%) translateY(-50%);
-  width: calc(100vw - 40px);
 
   @media (min-width: 768px) {
     font-size: 60px;
