--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -224,14 +224,14 @@
 .btn {
   display: inline-block;
   font-size: 1rem;
-  line-height: 20px;
+  line-height: 30px;
   font-weight: 500;
   letter-spacing: 0.01em;
   color: #212529;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  height: 3rem;
+  height: 48px;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
