Start to work at Filter

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -16,7 +16,7 @@
 
 .header__container {
   max-width: 1440px;
-  padding: 5px 1.25rem;
+  padding: 5px 20px;
   height: 62px;
   display: flex;
   justify-content: space-between;
