--- a/src/components/Visual/visual.scss
+++ b/src/components/Visual/visual.scss
@@ -1,5 +1,5 @@
 .visual-box {
-  height: calc(100vh - 63px);
+  height: calc(80vh - 63px);
   overflow: hidden;
   position: relative;
   background: url('/images/visual.jpg') no-repeat 50% 50%;
@@ -9,11 +9,12 @@
   justify-content: center;
 
   @media (min-width: 768px) {
-    height: calc(100vh - 55px);
+    height: calc(80vh - 55px);
   }
 
   @media (min-width: 1280px) {
-    height: calc(100vh - 63px);
+    height: calc(80vh - 63px);
+    min-height: 450px;
   }
 
   img {
