--- a/src/components/CurrencyFilter/CurrencyFilter.scss
+++ b/src/components/CurrencyFilter/CurrencyFilter.scss
@@ -42,3 +42,102 @@
 .react-tabs__tab-panel {
   padding: 30px;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-row {
+  &.inline {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+    }
+  }
+}
+
+.form-row_label {
+  @media (min-width: 768px) {
+    flex-basis: 124px;
+  }
+
+  &.pt-1 {
+    @media (min-width: 768px) {
+      padding-top: 12px;
+    }
+  }
+}
+
+.form-row_holder {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.select {
+  height: 48px;
+  background: #f9fafc;
+  border: 1px solid #e0e1e4;
+  border-radius: 5px;
+  padding-left: 5px;
+
+  select {
+    width: 100%;
+    height: 100%;
+    font-size: 1rem;
+    border: none;
+    background: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.chip-container {
+  padding: 8px 0 0;
+  display: flex;
+  gap: 7px;
+}
+
+.badge {
+  background: #f9fafc;
+  border: 1px solid #818489;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 0.375rem;
+  color: #818489;
+  cursor: pointer;
+}
+
+.text-field {
+  height: 48px;
+  background: #f9fafc;
+  border: 1px solid #e0e1e4;
+  border-radius: 5px;
+  padding: 10px 8px;
+  display: flex;
+  align-items: center;
+
+  input {
+    font-size: 1rem;
+    flex-grow: 1;
+    height: 40px;
+    width: 100%;
+    line-height: 20px;
+    padding: 10px 0;
+    margin: 0;
+    border: none;
+    background: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
