--- a/src/components/WelcomeSection/WelcomeSection.scss
+++ b/src/components/WelcomeSection/WelcomeSection.scss
@@ -1,5 +1,5 @@
 .welcome-section {
-  padding: 20px 0;
+  padding: 30px 0;
 }
 
 .welcome-section__container {
@@ -10,18 +10,27 @@
 
 .welcome-section__head {
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.3;
   font-weight: 500;
   margin-bottom: 45px;
+
+  @media (min-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .welcome-section_title {
-  font-size: 38px;
-  line-height: 51px;
+  font-size: 24px;
+  line-height: 1.35;
   font-weight: 700;
   text-transform: uppercase;
-  margin: 0 0 20px;
+  margin: 0 0 10px;
+
+  @media (min-width: 768px) {
+    font-size: 38px;
+    margin: 0 0 20px;
+  }
 }
 
 .welcome-section__head p {
