--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,37 @@ a {
     padding-top: 63px;
   }
 }
+
+/* buttons */
+.btn {
+  display: inline-block;
+  font-size: 1rem;
+  line-height: 30px;
+  font-weight: 500;
+  letter-spacing: 0.01em;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  height: 48px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 6px 20px;
+  border-radius: 10px;
+  transition: all 0.3s linear;
+  white-space: nowrap;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #146ec4;
+  border-color: #146ec4;
+}
