--- a/src/components/Visual/visual.scss
+++ b/src/components/Visual/visual.scss
@@ -1,26 +1,23 @@
 .visual-box {
-  height: calc(80vh - 63px);
-  overflow: hidden;
-  position: relative;
-  background: url('/images/visual.jpg') no-repeat 50% 50%;
-  background-size: cover;
+  min-height: calc(80vh);
+  padding: 20px 0 30px;
+  // background: url('/images/visual.jpg') no-repeat 50% 50%;
+  // background-size: cover;
+  background: #855dbb;
+  background: linear-gradient(180deg, rgba(236, 82, 121, 1) 0%, rgba(27, 105, 254, 1) 100%);
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
 
-  @media (min-width: 768px) {
-    height: calc(80vh - 55px);
-  }
-
   @media (min-width: 1280px) {
-    height: calc(80vh - 63px);
     min-height: 450px;
   }
 
   img {
-    object-fit: cover;
+    max-width: 400px;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin: 30px auto 0;
   }
 }
 
